# UnifiMetrics

./: Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
src/: config.rs  logging.rs  main.rs  metrics.rs
src/unifi/: cache.rs  mod.rs  models.rs  network.rs  protect.rs
