[package]
name = "unifimetrics"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.9"
chrono = "0.4"
log = "0.4"
fern = "0.7"
colored = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "unifimetrics"
path = "src/main.rs"